<resources>
	<string name="app_name">Shader Editor</string>
	<string name="cannot_open_database">Cannot open database!</string>

	<!-- MainActivity -->
	<string name="drawer_open">Open drawer</string>
	<string name="drawer_close">Close drawer</string>
	<string name="no_shaders">No shaders</string>
	<string name="unsuitable_text">Sorry, this text is unsuitable.</string>
	<string name="insert_tab">Insert tab</string>
	<string name="run_code">Run code</string>
	<string name="toggle_code">Toggle code</string>
	<string name="save_shader">Save shader</string>
	<string name="add_shader">New shader</string>
	<string name="duplicate_shader">Save as new shader</string>
	<string name="delete_shader">Delete shader</string>
	<string name="share_shader">Share shader</string>
	<string name="update_wallpaper">Update wallpaper</string>
	<string name="textures">Textures</string>
	<string name="settings">Settings</string>
	<string name="sure_remove_shader">Are you sure you want to delete this shader?</string>

	<!-- preferences -->
	<string name="preferences">Preferences</string>
	<string name="wallpaper">Wallpaper</string>
	<string name="save_battery">Save battery</string>
	<string name="save_battery_summary">Stop rendering when battery is low</string>
	<string name="sensors">Sensors</string>
	<string name="sensor_delay">Sensor Delay</string>
	<string name="no_shader_selected">No shader selected</string>
	<string name="shader">Shader</string>
	<string name="editor">Editor</string>
	<string name="run_mode">Run mode</string>
	<string name="update_delay">Update delay</string>
	<string name="text_size">Text size</string>
	<string name="show_insert_tab">Show insert tab</string>
	<string name="show_insert_tab_summary">Show insert tab menu item</string>
	<string name="save_on_run">Save on run</string>
	<string name="save_on_run_summary">Save changes when running manually</string>

	<!-- preference names -->
	<string name="run_auto">Auto run on change</string>
	<string name="run_manually">Run manually</string>
	<string name="run_manually_extra">Run in extra activity</string>
	<string name="fastest">Fastest</string>
	<string name="game">Game</string>
	<string name="normal">Normal</string>
	<string name="ui">UI</string>
	<string name="small">Small</string>
	<string name="medium">Medium</string>
	<string name="big">Big</string>

	<!-- wallpaper -->
	<string name="wallpaper_description">Write your own live wallpaper</string>

	<!-- preview -->
	<string name="preview">Preview</string>

	<!-- textures -->
	<string name="texture_preview">Texture preview</string>
	<string name="texture_name_noise">noise</string>
	<string name="choose_image">Choose image</string>
	<string name="no_textures">No textures available</string>
	<string name="crop_image">Crop image</string>
	<string name="cannot_pick_image">Cannot open image. Please try another app to choose an image.</string>
	<string name="texture_properties">Texture properties</string>
	<string name="texture_size">Texture size in pixels</string>
	<string name="texture_name">Unique texture name</string>
	<string name="input_texture_name">Give a name</string>
	<string name="should_add_uniform">Add uniform sampler2D statement to source?</string>
	<string name="rotate_clockwise">Rotate clockwise</string>
	<string name="save_texture">Save texture</string>
	<string name="missing_name">You need to give a name</string>
	<string name="invalid_texture_name">Invalid name, please choose a name you can use in a GLSL source</string>
	<string name="illegal_rectangle">Illegal rectangle</string>
	<string name="out_of_memory">Image too big</string>
	<string name="name_already_taken">Name already taken</string>
	<string name="view_texture">View texture</string>
	<string name="insert_uniform_sampler">Insert uniform sampler2D statement</string>
	<string name="remove_texture">Remove texture</string>
	<string name="sure_remove_texture">Do you want to remove this texture?</string>

	<!-- UniformsActivity -->
	<string name="uniforms">Add uniform</string>
	<string name="resolution_in_pixels">Surface resolution in pixels</string>
	<string name="time_in_seconds_since_load">Time in seconds since load</string>
	<string name="touch_position_in_pixels">Touch position of first touch in pixels</string>
	<string name="number_of_touches">Number of touches</string>
	<string name="positions_of_touches">Positions of touches in pixels</string>
	<string name="linear_acceleration_vector">Linear acceleration in m/s^2</string>
	<string name="gravity_vector">Gravity vector in m/s^2</string>
	<string name="device_rotation">Device rotation on the x, y and z axis</string>
	<string name="magnetic_field">Geomagnetic field strength along the x, y and z axis</string>
	<string name="light">Ambient light level in SI lux units</string>
	<string name="pressure">Atmospheric pressure in hPa (millibar)</string>
	<string name="proximity">Proximity sensor distance measured in centimeters</string>
	<string name="battery_level">Battery level from 0.0 to 1.0</string>
	<string name="wallpaper_offset">Wallpaper offset in pixels</string>
	<string name="previous_frame">Previous rendered frame</string>
	<string name="date_time">Year, month, day and time in seconds</string>
	<string name="start_random">Random value initialized at load</string>
</resources>
