<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/add_shader"
		android:icon="@android:drawable/ic_menu_add"
		android:title="@string/add_shader"/>
	<item
		android:id="@+id/duplicate_shader"
		android:icon="@android:drawable/ic_menu_edit"
		android:title="@string/duplicate_shader"/>
	<item
		android:id="@+id/delete_shader"
		android:icon="@android:drawable/ic_menu_delete"
		android:title="@string/delete_shader"/>
	<item
		android:id="@+id/save_shader"
		android:icon="@android:drawable/ic_menu_save"
		android:title="@string/save_shader"/>
	<item
		android:id="@+id/share_shader"
		android:icon="@android:drawable/ic_menu_share"
		android:title="@string/share_shader"/>
	<item
		android:id="@+id/update_wallpaper"
		android:title="@string/update_wallpaper"/>
	<item
		android:id="@+id/preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/preferences"/>
</menu>
