<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:material="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/run_code"
		android:icon="@drawable/ic_action_run"
		android:title="@string/run_code"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/save_shader"
		android:icon="@drawable/ic_action_save"
		android:title="@string/save_shader"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/toggle_code"
		android:icon="@drawable/ic_action_preview"
		android:title="@string/toggle_code"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/add_shader"
		android:icon="@drawable/ic_action_add"
		android:title="@string/add_shader"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/duplicate_shader"
		android:icon="@drawable/ic_action_duplicate"
		android:title="@string/duplicate_shader"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/delete_shader"
		android:icon="@drawable/ic_action_delete"
		android:title="@string/delete_shader"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/share_shader"
		android:icon="@drawable/ic_action_share"
		android:title="@string/share_shader"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/update_wallpaper"
		android:icon="@drawable/ic_action_update"
		android:title="@string/update_wallpaper"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/textures"
		android:icon="@drawable/ic_action_textures"
		android:title="@string/textures"
		material:showAsAction="ifRoom"/>
</menu>
