<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/preferences"
	android:key="preferences">
	<PreferenceCategory
		android:title="@string/wallpaper"
		android:key="wallpaper_preferences">
		<de.markusfisch.android.shadereditor.preference.ShaderListPreference
			android:key="shader"
			android:title="@string/shader"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/editor"
		android:key="editor_preferences">
		<CheckBoxPreference
			android:key="compile_on_change"
			android:title="@string/compile_on_change"
			android:summary="@string/compile_on_change_summary"
			android:checked="true"
			android:defaultValue="true"/>
		<ListPreference
			android:key="update_delay"
			android:title="@string/update_delay"
			android:entries="@array/update_delay_names"
			android:entryValues="@array/update_delay_values"
			android:defaultValue="1000"/>
		<ListPreference
			android:key="text_size"
			android:title="@string/text_size"
			android:entries="@array/text_size_names"
			android:entryValues="@array/text_size_values"
			android:defaultValue="12"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/sensors"
		android:key="sensor_preferences">
		<ListPreference
			android:key="sensor_delay"
			android:title="@string/sensor_delay"
			android:entries="@array/sensor_delay_names"
			android:entryValues="@array/sensor_delay_names"
			android:defaultValue="Normal"/>
	</PreferenceCategory>
</PreferenceScreen>
